fix: horizontal overflow

--- a/src/sections/edit-file-metadata/EditFileMetadataRow.module.scss
+++ b/src/sections/edit-file-metadata/EditFileMetadataRow.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   gap: 1rem;
   padding-block: 0.75rem 0.5rem;
+  overflow-x: hidden;
 
   .icon {
     display: none;
